--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
+# microsoft generated files
+~$*
 
-**/.DS_Store
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+.Rhistory
+ehthumbs.db
+Thumbs.db
+.ipynb.checkpoints
+.Rapp.history
